@@ -359,11 +359,12 @@ void VDIFMark5DataStream::initialiseFile(int configindex, int fileindex)
 	long long n;
 	int doUpdate = 0;
 	char *mk5dirpath;
+	int muxFlags;
 	XLR_RETURN_CODE xlrRC;
 
 	format = config->getDataFormat(configindex, streamnum);
 	sampling = config->getDSampling(configindex, streamnum);
-	nbits = config->getDNumBits(configindex, streamnum);
+	nbits = config->getDNumBits(configindex, streamnum);	/* Bits per sample.  If complex, bits per component. */
 	nrecordedbands = config->getDNumRecordedBands(configindex, streamnum);
 	inputframebytes = config->getFrameBytes(configindex, streamnum);
 	framespersecond = config->getFramesPerSecond(configindex, streamnum)/config->getDNumMuxThreads(configindex, streamnum);
@@ -379,7 +380,13 @@ void VDIFMark5DataStream::initialiseFile(int configindex, int fileindex)
 	nthreads = config->getDNumMuxThreads(configindex, streamnum);
 	threads = config->getDMuxThreadMap(configindex, streamnum);
 
-	rv = configurevdifmux(&vm, inputframebytes, framespersecond, nbits, nthreads, threads, nSort, nGap, VDIF_MUX_FLAG_RESPECTGRANULARITY);
+	muxFlags = VDIF_MUX_FLAG_RESPECTGRANULARITY;
+	if(sampling == Configuration::COMPLEX)
+	{
+		cinfo << startl << "Note: this is complex sampled data.  Multiplexing complex data is poorly tested." << endl;
+		muxFlags |= VDIF_MUX_FLAG_COMPLEX;
+	}
+	rv = configurevdifmux(&vm, inputframebytes, framespersecond, nbits, nthreads, threads, nSort, nGap, muxFlags);
 	if(rv < 0)
 	{
 		cfatal << startl << "configurevmux failed with return code " << rv << endl;
